Endringer for å oppfylle SonarQube-forslag